# geometrical-ray-tracing

./: .gitattributes  .gitignore  Complex_Component.cpp  Complex_Component.h  Component.h  Mirror_Plane.cpp  Mirror_Plane.h  Mirror_Sph.h  Plane.cpp  Plane.h  README.md  Refract_Plane.h  Refract_Sph.cpp  Spherical.cpp  Spherical.h  cython_header.pxd  general.cpp  general.h  pyproject.toml  setup.py  test.py  test_unittest.py  trace_func.cpp  trace_func.h  tracing.cp38-win_amd64.pyd  tracing.cpp  tracing.html  tracing.pyx
cpp/: Plane.cpp  Plane.h  Prism.cpp  Prism.h  Ray.cpp  Ray.h  Refract_Sph.h  Screen_Plane.cpp  Spherical.h  ray-tracing.cpp  ray-tracing.sln  ray-tracing.vcxproj  trace_func.cpp
cpp/optics/: Complex_Component.cpp  Complex_Component.h  Component.cpp  Component.h  Mirror_Plane.cpp  Mirror_Plane.h  Mirror_Sph.cpp  Mirror_Sph.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Refract_Plane.cpp  Refract_Plane.h  Refract_Sph.cpp  Refract_Sph.h  Screen_Plane.cpp  Screen_Plane.h  Spherical.cpp  Spherical.h  general.cpp  general.h  trace_func.cpp  trace_func.h
docs/Ray tracing/: bibo.bib  main.tex
examples/: Performance.ipynb  aberration.ipynb  circular_prism.py  concentric_mirrors.py  lenses.py  mirror.py  plane_mirrors.py  readme-graphic.py  screen.py
testing/: generic_test_functions.py  test_PyLens.py  test_PyMirror_Plane.py  test_PyMirror_Sph.py  test_PyRay.py  test_PyRefract_Plane.py  test_PyRefract_Sph.py  test_PyScreen_Plane.py  test_PyTrace.py  test_unittest.py
tracing/: cython_header.pxd  tracing.pyx
tracing/cpp/: ray-tracing.vcxproj.filters
tracing/cpp/optics/: Complex_Component.cpp  Component.h  Mirror_Plane.cpp  Mirror_Plane.h  Mirror_Sph.cpp  Plane.cpp  (+10 more)
