# geometrical-ray-tracing: Program to perform geometrical ray tracing
# Copyright (C) 2022  Tom Spencer (tspencerprog@gmail.com)

# This file is part of geometrical-ray-tracing

# geometrical-ray-tracing is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.


[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "geometrical-ray-tracing"
version = "0.1"
authors = [
    {name = "Tom Spencer", email = "tspencerprog@gmail.com"},
]
description = "A Python module for performing 2d geometrical ray tracing"
readme = "README.md"
license = {text = "GPLv3 or later"}
requires-python = ">=3"
dependencies = ["numpy"]
classifiers  =  [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/tms-ninja/geometrical-ray-tracing"
repository = "https://github.com/tms-ninja/geometrical-ray-tracing"
